--- a/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
+++ b/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202205300219314_PopulateCategoryTable.designer.cs">
       <DependentUpon>202205300219314_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206121427075_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202206121427075_AddNameColumnToApplicationUser.designer.cs">
+      <DependentUpon>202206121427075_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDBContext.cs" />
@@ -284,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205300219314_PopulateCategoryTable.resx">
       <DependentUpon>202205300219314_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206121427075_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202206121427075_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
