--- a/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
+++ b/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
@@ -261,6 +261,8 @@
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DTOs\AttendanceDto.cs" />
+    <Compile Include="DTOs\FollowingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -284,6 +286,10 @@
     <Compile Include="Migrations\202206121747047_AddAttendance.designer.cs">
       <DependentUpon>202206121747047_AddAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206122135288_AddFollowingsTable.cs" />
+    <Compile Include="Migrations\202206122135288_AddFollowingsTable.designer.cs">
+      <DependentUpon>202206122135288_AddFollowingsTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDBContext.cs" />
@@ -291,6 +297,7 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Following.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -387,6 +394,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206121747047_AddAttendance.resx">
       <DependentUpon>202206121747047_AddAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206122135288_AddFollowingsTable.resx">
+      <DependentUpon>202206122135288_AddFollowingsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
