--- a/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
+++ b/BigSchool_ThaiTrungKien_1911061800/BigSchool_ThaiTrungKien_1911061800.csproj
@@ -362,7 +362,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\CourseForm.cshtml" />
+    <Content Include="Views\Courses\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
